# bookshelf-scanner-LMStudio

./: .gitignore  README.md  bookshelf-scanner.code-workspace
ai/: README.md  pyproject.toml
ai/src/: main.py  predict.py  predict1.py  predict2.py
ai/src/bookscanner_ai/: __init__.py  predict.py
ai/src/bookscanner_ai/utils/: __init__.py  image_utils.py  path_utils.py
ai/src/utils/: image_utils.py  path_utils.py
backend/: README.md  p.install.txt  pyproject.toml
backend/models/: moondream2-text-model-Q4_K_M.gguf
backend/src/: app.py  main.py  test_pred.py
backend/src/models/: result.py
backend/src/routers/: api.py  predict_router.py
backend/tests/: predict.py
docs/: architecture.drawio
frontend/: .prettierrc.mjs  angular.json  bun.lockb  package.json
frontend/src/: index.html  main.ts
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/: book-prediction.service.ts
frontend/src/app/core/models/: index.ts  result.dto.ts
frontend/src/app/core/services/: book-prediction.service.ts  index.ts
frontend/src/app/pages/upload/: route.ts  upload.component.html  upload.component.scss  upload.component.ts
