[tool.poetry]
name = "bookscanner-backend"
version = "0.1.0"
description = ""
authors = ["Sukhrob Ilyosbekov <suxrobgm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
