[tool.poetry]
name = "bookscanner-backend"
version = "0.1.0"
description = ""
authors = ["Sukhrob Ilyosbekov <suxrobgm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
bookscanner-ai = {path = "../ai", develop = true}

[[tool.poetry.source]]
name = "pytorch-whl"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "llama-cpp-python-whl"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
